Fix spacing on sidebar buttons

--- a/app/src/styles/_sidebar.scss
+++ b/app/src/styles/_sidebar.scss
@@ -22,6 +22,7 @@ aside {
     left: 50%;
     transform: translate(-50%, 0px);
     text-align: center;
+    width: calc(100% - 20px);
 
     &.main-nav {
       top: 40px;
@@ -32,7 +33,6 @@ aside {
     }
 
     li {
-      width: 75px;
       margin-bottom: 10px;
       border-radius: 5px;
       padding: 10px 0px;
